objects/PRCGResearchNote__c.object
<CustomObject>
    <fields>
        <fullName>Abstract__c</fullName>
        <label>Abstract</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>The approval status of the Security Research</description>
        <inlineHelpText>Enter or update the approval status of the Security Research</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssetClass__c</fullName>
        <label>Asset Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank Loans</fullName>
                </value>
                <value>
                    <fullName>Convertibles</fullName>
                </value>
                <value>
                    <fullName>Emerging Markets Debt</fullName>
                </value>
                <value>
                    <fullName>Emerging Markets Equity</fullName>
                </value>
                <value>
                    <fullName>Frontier Markets</fullName>
                </value>
                <value>
                    <fullName>High Yield</fullName>
                </value>
                <value>
                    <fullName>Intermediate-Term Bond</fullName>
                </value>
                <value>
                    <fullName>International Developed Equity</fullName>
                </value>
                <value>
                    <fullName>International Small Cap Equity</fullName>
                </value>
                <value>
                    <fullName>Investment Grade</fullName>
                </value>
                <value>
                    <fullName>Long/Short Credit</fullName>
                </value>
                <value>
                    <fullName>Long/Short Equity</fullName>
                </value>
                <value>
                    <fullName>Managed Futures</fullName>
                </value>
                <value>
                    <fullName>Market Neutral</fullName>
                </value>
                <value>
                    <fullName>MLP</fullName>
                </value>
                <value>
                    <fullName>Mortgages/Agencies</fullName>
                </value>
                <value>
                    <fullName>Multialternative</fullName>
                </value>
                <value>
                    <fullName>Multisector Bond</fullName>
                </value>
                <value>
                    <fullName>Municipal Bond</fullName>
                </value>
                <value>
                    <fullName>Nontraditional Bond</fullName>
                </value>
                <value>
                    <fullName>Option Writing</fullName>
                </value>
                <value>
                    <fullName>Precious Metals</fullName>
                </value>
                <value>
                    <fullName>Preferreds</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Short-Term Bond</fullName>
                </value>
                <value>
                    <fullName>US Government</fullName>
                </value>
                <value>
                    <fullName>US Large Cap Equity</fullName>
                </value>
                <value>
                    <fullName>US Mid Cap Equity</fullName>
                </value>
                <value>
                    <fullName>US Small Cap Equity</fullName>
                </value>
                <value>
                    <fullName>UST Inflation Protected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attachment1FileName__c</fullName>
        <label>Attachment 1 File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment2FileName__c</fullName>
        <label>Attachment 2 File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment3FileName__c</fullName>
        <label>Attachment 3 File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTimePublished__c</fullName>
        <label>Date/Time Published</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HasReplacementFund__c</fullName>
        <formula>IF( ISBLANK( ReplacementFund1__c ), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Replacement Fund?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkToRecord__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_300, FIND( '/services', $Api.Partner_Server_URL_300))+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MorningstarCategoryGroup__c</fullName>
        <label>Morningstar Category Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MorningstarCategoryGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MorningstarCategory__c</fullName>
        <label>Morningstar Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MorningstarCategoryGroup__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>MorningstarCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoteHtmlFileName__c</fullName>
        <label>Note Html File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoteTextFileName__c</fullName>
        <label>Note Text File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PRCCommentaryHtmlFileName__c</fullName>
        <label>PRC Commentary Html File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRCCommentaryTextFileName__c</fullName>
        <label>PRC Commentary Text File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRCCommentary__c</fullName>
        <label>PRC Commentary</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PeopleHtmlFileName__c</fullName>
        <label>People Html File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PeopleTextFileName__c</fullName>
        <label>People Text File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>People__c</fullName>
        <label>People</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PerformanceHtmlFileName__c</fullName>
        <label>Performance Html File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PerformanceTextFileName__c</fullName>
        <label>Performance Text File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance__c</fullName>
        <label>Performance</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProcessHtmlFileName__c</fullName>
        <label>Process Html File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessTextFileName__c</fullName>
        <label>Process Text File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <description>Process Notes associated with the Security Research</description>
        <label>Process</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to publish this note to non-PRCG users of Salesforce; if unchecked, this note cannot be seen by non-PRCG users</inlineHelpText>
        <label>Publish?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelatedSymbols__c</fullName>
        <description>Related Symbols of the Security Research</description>
        <inlineHelpText>Enter any related symbols, separated by semi-colons</inlineHelpText>
        <label>Related Symbols</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReplacementFund1FullName__c</fullName>
        <formula>ReplacementFund1__r.LegalNamewithTicker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement Fund 1 Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplacementFund1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary Replacement Fund related to the Security Research</description>
        <label>Replacement Fund 1</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>PRCG Research Notes</relationshipLabel>
        <relationshipName>PRCGResearchNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReplacementFund2FullName__c</fullName>
        <formula>ReplacementFund2__r.LegalNamewithTicker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement Fund 2 Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplacementFund2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Replacement Fund 2 of the Security Research</description>
        <label>Replacement Fund 2</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>PRCG Research Notes (Replacement Fund 2)</relationshipLabel>
        <relationshipName>PRCGResearchNotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SecurityAssetType__c</fullName>
        <formula>Security__r.AssetType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Asset Type from the Security object</inlineHelpText>
        <label>Security Asset Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecurityMorningstarCategory__c</fullName>
        <formula>Security__r.MorningstarCategory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Morningstar Category from the Security object</inlineHelpText>
        <label>Security Morningstar Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Security</label>
        <referenceTo>Security__c</referenceTo>
        <relationshipLabel>PRCG Research Notes</relationshipLabel>
        <relationshipName>PRCGResearchNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sentiment__c</fullName>
        <description>Sentiment associated with the Securities Research</description>
        <label>Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Neutral</fullName>
                    <default>true</default>
                    <label>Neutral</label>
                </value>
                <value>
                    <fullName>Complement</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
                <value>
                    <fullName>Underweight</fullName>
                </value>
                <value>
                    <fullName>Overweight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ticker__c</fullName>
        <description>The Security Ticker Symbol (identifier)</description>
        <formula>Security__r.Ticker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ticker Symbol from the Security object</inlineHelpText>
        <label>Ticker</label>
        <type>Text</type>
    </fields>
    <description>Holds research related to a Security; this data is authored by PRCG.</description>
    <label>PRCG Research Note</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRCG Research Notes</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All_Asset_Class_Notes</fullName>
        <columns>NAME</columns>
        <columns>AssetClass__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>DateTimePublished__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PRCGResearchNote__c.AssetClassNote</value>
        </filters>
        <label>All Asset Class Notes</label>
    </listViews>
    <listViews>
        <fullName>All_Competitor_Intel_Notes</fullName>
        <columns>NAME</columns>
        <columns>Security__c</columns>
        <columns>Ticker__c</columns>
        <columns>SecurityAssetType__c</columns>
        <columns>SecurityMorningstarCategory__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>DateTimePublished__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PRCGResearchNote__c.CompetitorIntelNote</value>
        </filters>
        <label>All Competitor Intel Notes</label>
    </listViews>
    <listViews>
        <fullName>All_PRC_Analyst_Notes</fullName>
        <columns>NAME</columns>
        <columns>Security__c</columns>
        <columns>Ticker__c</columns>
        <columns>SecurityMorningstarCategory__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>DateTimePublished__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PRCGResearchNote__c.PRCAnalystNote</value>
        </filters>
        <label>All PRC Analyst Notes</label>
    </listViews>
    <listViews>
        <fullName>All_Research_Notes</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Security__c</columns>
        <columns>Ticker__c</columns>
        <columns>AssetClass__c</columns>
        <columns>SecurityMorningstarCategory__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>DateTimePublished__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Research Notes</label>
    </listViews>
    <listViews>
        <fullName>My_Asset_Class_Notes</fullName>
        <columns>NAME</columns>
        <columns>DateTimePublished__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PRCGResearchNote__c.AssetClassNote</value>
        </filters>
        <label>My Asset Class Notes</label>
        <sharedTo>
            <group>PRCG</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Competitor_Intel_Notes</fullName>
        <columns>NAME</columns>
        <columns>DateTimePublished__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PRCGResearchNote__c.CompetitorIntelNote</value>
        </filters>
        <label>My Competitor Intel Notes</label>
        <sharedTo>
            <group>PRCG</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_PRC_Analyst_Notes</fullName>
        <columns>NAME</columns>
        <columns>DateTimePublished__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PRCGResearchNote__c.PRCAnalystNote</value>
        </filters>
        <label>My PRC Analyst Notes</label>
        <sharedTo>
            <group>PRCG</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Research_Notes</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>DateTimePublished__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Research Notes</label>
        <sharedTo>
            <group>PRCG</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>AssetClassNote</fullName>
        <active>true</active>
        <description>Use this for Asset Class Notes</description>
        <label>Asset Class Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>CompetitorIntelNote</fullName>
        <active>true</active>
        <description>Use this for Competitor Intel Notes</description>
        <label>Competitor Intel Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRCAnalystNote</fullName>
        <active>true</active>
        <description>Use this for PRC Analyst Notes</description>
        <label>PRC Analyst Note</label>
    </recordTypes>
</CustomObject>